--- a/platforms/android/AndroidManifest.xml
+++ b/platforms/android/AndroidManifest.xml
@@ -1,1 +1,1 @@
-<manifest android:hardwareAccelerated="true" android:versionCode="3" android:versionName="1.0.3" android:debuggable="false" android:windowSoftInputMode="adjustPan" package="com.compay.app" xmlns:android="http://schemas.android.com/apk/res/android">
+<manifest android:versionCode="3" android:versionName="1.0.3" android:debuggable="false" >
